--- a/teamstats/templates/taulukko_tablesorter.html
+++ b/teamstats/templates/taulukko_tablesorter.html
@@ -1,5 +1,5 @@
-<script type="text/javascript" src="http://nipsu.dyndns.org/tuhlaajapojat-media/jquery-1.6.2.js"></script> 
-<script type="text/javascript" src="http://nipsu.dyndns.org/tuhlaajapojat-media/jquery.tablesorter.js"></script>
+<script type="text/javascript" src="jquery-1.6.2.js"></script> 
+<script type="text/javascript" src="jquery.tablesorter.js"></script>
 
 <script type="text/javascript">
   $(document).ready(
