--- a/teamstats/templates/base.html
+++ b/teamstats/templates/base.html
@@ -6,16 +6,16 @@
   {% block header %}
   {% endblock %} 
     <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}style.css" />
-    <title>FC Tuhlaajapojat</title>
+    <title>Team Name</title>
 </head>
 
 <body>
   <div id="sidebar">
     {% block sidebar %}
-      <a href="{% url tuhlaajapojat.views.index %}">[Etusivu]</a>
-      <a href="{% url tuhlaajapojat.views.pelaajat %}">[Pelaajat]</a> 
+      <a href="{% url teamstats.views.index %}">[Etusivu]</a>
+      <a href="{% url teamstats.views.pelaajat %}">[Pelaajat]</a> 
       {% for season in season_list %}
-	<a href="{% url tuhlaajapojat.views.kausitilasto season.id %}">[{{ season }}]</a>
+	<a href="{% url teamstats.views.kausitilasto season.id %}">[{{ season }}]</a>
       {% endfor %}
     {% endblock %}
   </div>
