--- a/teamstats/templates/taulukko_tablesort.html
+++ b/teamstats/templates/taulukko_tablesort.html
@@ -1,4 +1,4 @@
-<script type="text/javascript" src="http://nipsu.dyndns.org/tuhlaajapojat-media/tablesort.js"></script> 
+<script type="text/javascript" src="tablesort.js"></script> 
 
 <table>
   <thead>
