--- a/teamstats/templates/teamstats/show_match_registration.html
+++ b/teamstats/templates/teamstats/show_match_registration.html
@@ -3,7 +3,7 @@
 {% block content %}
 
 {% if match %}
-    {% include "ottelu_tiedot.html" %}
+    {% include "header_match.html" %}
 
     {% include "ilmoittautumiset.html" %}
 
