--- a/teamstats/templates/teamstats/show_season.html
+++ b/teamstats/templates/teamstats/show_season.html
@@ -19,9 +19,9 @@
   {% endif %}
 
   <h2>Pelaajat</h2>
-    {% include "taulukko.html" %}
+    {% include "table.html" %}
 
   <h2>Ottelut</h2>
-  {% include "ottelulista.html" %}
+  {% include "list_matches.html" %}
 
 {% endblock %}
