Rename template files

--- a/teamstats/templates/teamstats/show_match_registration.html
+++ b/teamstats/templates/teamstats/show_match_registration.html
@@ -5,7 +5,7 @@
 {% if match %}
     {% include "header_match.html" %}
 
-    {% include "ilmoittautumiset.html" %}
+    {% include "registration_list.html" %}
 
 {% else %}
     <p>Ottelua ei löytynyt.</p>
