--- a/teamstats/templates/teamstats/show_all_players.html
+++ b/teamstats/templates/teamstats/show_all_players.html
@@ -1,9 +1,9 @@
-{% extends "base_season.html" %}
+{% extends "teamstats/base_season.html" %}
 
 
 {% block content %}
 
 <h1>Pelaajat</h1>
-{% include "table.html" %}
+{% include "teamstats/table.html" %}
 
 {% endblock %}
