Scripts for saving and loading data

--- a/teamstats/templates/teamstats/base.html
+++ b/teamstats/templates/teamstats/base.html
@@ -5,7 +5,7 @@
 <head>
   {% block header %}
   {% endblock %} 
-    <link rel="stylesheet" type="text/css" href="{{ STATIC_URL }}style.css" />
+    <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}style.css" />
     <title>Team Name</title>
 </head>
 
