Add docstrings to views

--- a/teamstats/templates/teamstats/base.html
+++ b/teamstats/templates/teamstats/base.html
@@ -6,7 +6,7 @@
   {% block header %}
   {% endblock %} 
     <link rel="stylesheet" type="text/css" href="{% get_static_prefix %}style.css" />
-    <title>Team Name</title>
+    <title>{{ team_name }}</title>
 </head>
 
 <body>
