--- a/teamstats/templates/teamstats/registration_functions.html
+++ b/teamstats/templates/teamstats/registration_functions.html
@@ -2,36 +2,36 @@
 
   function disableFields(player, disable)
   { 
-    if (player < 0) {
-      var start = 0;
-      var end = choice.length;
-    } 
+    document.getElementById('edit_button-'+player).disabled = !disable;
+    document.getElementById('save_button-'+player).disabled = disable;
+    document.getElementById('cancel_button-'+player).disabled = disable;
+    document.getElementById('in_radio-'+player).disabled = disable;
+    document.getElementById('out_radio-'+player).disabled = disable;
+    document.getElementById('na_radio-'+player).disabled = disable;
+    if (disable) {
+      document.getElementById('fields-'+player).style.visibility = 'hidden';
+      document.getElementById('edit-'+player).style.visibility = 'visible';
+    }
     else {
-      var start = player;
-      var end = player + 1;
+      document.getElementById('edit-'+player).style.visibility = 'hidden';
+      document.getElementById('fields-'+player).style.visibility = 'visible';
     }
-    for (player = start; player < end; player = player + 1) {
-      document.getElementById('edit_button-'+player).disabled = !disable;
-      document.getElementById('save_button-'+player).disabled = disable;
-      document.getElementById('cancel_button-'+player).disabled = disable;
-      document.getElementById('in_radio-'+player).disabled = disable;
-      document.getElementById('out_radio-'+player).disabled = disable;
-      document.getElementById('na_radio-'+player).disabled = disable;
-      if (disable) {
-        document.getElementById('fields-'+player).style.visibility = 'hidden';
-        document.getElementById('edit-'+player).style.visibility = 'visible';
+  }
+
+  function disableAllFields(disable)
+  {
+    for (var id in choice) {
+      // use hasOwnProperty to filter out keys from the Object.prototype
+      if (choice.hasOwnProperty(id)) {
+        disableFields(id, disable);
       }
-      else {
-        document.getElementById('edit-'+player).style.visibility = 'hidden';
-        document.getElementById('fields-'+player).style.visibility = 'visible';
-      }
-    }
+    }    
   }
 
   function editChoice(player)
   { 
-    cancelChoice(-1);
-    //disableFields(-1, true);
+    cancelAllChoice();
+    //disableAllFields(true);
     disableFields(player, false);
   }
   
@@ -54,29 +54,28 @@
 
   function cancelChoice(player)
   { 
-    if (player < 0) {
-      var start = 0;
-      var end = choice.length;
+    if (choice[player] == 1) {
+      document.getElementById('in_radio-'+player).checked = true;
     }
-    else {
-      var start = player;
-      var end = player + 1;
+    if (choice[player] == 2) {
+      document.getElementById('out_radio-'+player).checked = true;
     }
-    for (player = start; player < end; player = player + 1) {
-      if (choice[player] == 1) {
-        document.getElementById('in_radio-'+player).checked = true;
-      }
-      if (choice[player] == 2) {
-        document.getElementById('out_radio-'+player).checked = true;
-      }
-      if (choice[player] == 3) {
-        document.getElementById('na_radio-'+player).checked = true;
-      }
-      disableFields(player, true);
+    if (choice[player] == 3) {
+      document.getElementById('na_radio-'+player).checked = true;
     }
+    disableFields(player, true);
   }
-  window.onload = function(){disableFields(-1, true)};
 
-  index = 0;
+  function cancelAllChoice()
+  {
+    for (var id in choice) {
+      // use hasOwnProperty to filter out keys from the Object.prototype
+      if (choice.hasOwnProperty(id)) {
+        cancelChoice(id);
+      }
+    }    
+  }
+
+  window.onload = function(){disableAllFields(true)};
 
 </script>
