--- a/teamstats/templates/teamstats/show_match_result.html
+++ b/teamstats/templates/teamstats/show_match_result.html
@@ -37,7 +37,7 @@
     </thead>
 
     <tbody>
-      {% for player in players %}
+      {% for player in player_list %}
         <tr class="{% cycle odd even %}">
 	  <td align="right">
             {{ player.player.number }}
