--- a/teamstats/templates/teamstats/show_player.html
+++ b/teamstats/templates/teamstats/show_player.html
@@ -10,6 +10,9 @@
   Pistetilasto
 </h2>
 
+{% load static %}
+<script type="text/javascript" src="{% get_static_prefix %}tablesort.js"></script> 
+
 <table>
   <thead>
     <tr>
