--- a/teamstats/templates/teamstats/videoplayer.html
+++ b/teamstats/templates/teamstats/videoplayer.html
@@ -1,7 +1,7 @@
 
 {% for video in video_list %}
   <video width="320" height="240" controls="controls">
-    <source src="{{ video.url_mp4 }}" type="video/mp4">
+    {# <source src="{{ video.url_mp4 }}" type="video/mp4"> #}
     <source src="{{ video.url_ogg }}" type="video/ogg">
     Your browser does not support the video tag.
   </video> 
